# Drake-X

./: .env.example  .gitignore  README.md  VISION.md  ascii-art.txt  pyproject.toml
docs/: README.md  ai-auditability.md  apk-analysis.md  architecture.md  cheat-sheet.md  detection-outputs.md  dex-analysis.md  drake-unleashed.md  evidence-model.md  exploit-awareness.md  graph-analysis.md  ingestion.md  integrity.md  kali-setup.md  llm-setup.md  native-analysis.md  operator-control.md  pe-analysis.md  reporting.md  safety.md  sandbox.md  usage.md  ux-layer.md  v1.0-release-notes.md  validation-plan.md
docs/adr/: 0001-product-boundary.md  0002-local-ai-boundary-and-tool-policy.md  0003-workspace-and-scope-model.md  0004-remove-legacy-cli.md  0005-exploit-awareness-without-exploit-tooling.md
docs/doctrine/: console-persistent-analysis-requirements.md  v0.8-native-foundations-checklist.md  v0.9-exploit-awareness-checklist.md  v1-engineering-directive.md
drake_x/: __init__.py  __main__.py  cli.py  cli_theme.py  config.py  constants.py  exceptions.py  logging.py  orchestrator.py  registry.py  scope.py  session_store.py
drake_x/ai/: __init__.py  analyzer.py  audit.py  audited_run.py  context_builder.py  dex_context_builder.py  ollama_client.py  prompts.py
drake_x/assets/: banner.txt
drake_x/cli/: __init__.py  _elf_body.py  _ingest_body.py  _shared.py  _validate_body.py  ai_cmd.py  api_cmd.py  apk_cmd.py  assist_cmd.py  banner.py  console_cmd.py  correlate_cmd.py  elf_cmd.py  findings_cmd.py  flow_cmd.py  frida_cmd.py  graph_cmd.py  ingest_cmd.py  init_cmd.py  integrity_cmd.py  ioc_cmd.py  mission_cmd.py  pe_cmd.py  recon_cmd.py  report_cmd.py  sandbox_cmd.py  scope_cmd.py  status_cmd.py  tools_cmd.py  v2.py  web_cmd.py  (+1 more)
examples/: README.md  scope.yaml  workspace.toml
ghidra_scripts/: DrakeXExportNativeJson.java
prompts/: system_analyst.md  task_apk_assessment.md  task_apk_campaign.md  task_apk_obfuscation.md  task_assist_suggest.md  task_classify.md  task_dedupe.md  task_dex_assessment.md  task_exploit_assessment.md  task_next_steps.md  task_report_draft.md  task_summarize.md
tests/: test_ai_and_report.py  test_ai_audit.py  test_ai_context_builder.py  test_ai_dedupe.py  test_ai_exploit_assessment.py  test_api_inventory.py  test_apk_analysis.py  test_apk_native_integration.py  test_apk_v04.py  test_apk_vt_frida.py  test_attack_mapping.py  test_banner.py  test_console.py  test_content_discovery.py  test_detection_writer.py  test_dex_callgraph.py  test_dex_detection_and_ai.py  test_dex_integration.py  test_dex_multidex.py  test_dex_obfuscation.py  test_dex_parser.py  test_dex_report.py  test_dex_sensitive_apis.py  test_dex_strings.py  test_dex_tool_availability.py  test_diff.py  test_dotnet_parser.py  test_engine.py  test_engine_rate_limit.py  test_evidence_graph.py  test_exploit_indicators.py  test_frida_templates.py  test_ghidra_integration.py  test_graph_v05.py  test_headers_audit.py  test_integration_httpx.py  test_integration_subfinder.py  test_integrity_chain.py  test_integrity_cli.py  test_integrity_finalize.py  (+45 more)
(+225 files in other folders)
