[build-system]
# setuptools >= 80 is required because earlier versions wrote editable install
# `.pth` files in a way that Python 3.14's hardened `site` module skips on
# macOS (the files inherited the `UF_HIDDEN` flag and were silently ignored).
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drake-x"
version = "0.6.0"
description = "Local-first offensive security framework for Kali Linux with local AI assistance and strict scope enforcement."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Drake-X Contributors" }]
keywords = ["pentesting", "recon", "kali", "security", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
drake = "drake_x.cli:app"

[project.urls]
Homepage = "https://github.com/PauloBernardo90/Drake-X"
Repository = "https://github.com/PauloBernardo90/Drake-X"

# Explicit package list. We deliberately do NOT use `packages.find` here so
# that runtime output directories (e.g. `drake_x_runs/`) cannot be mistaken
# for namespace packages and shipped as part of the install.
[tool.setuptools]
packages = [
    "drake_x",
    "drake_x.ai",
    "drake_x.assets",
    "drake_x.ai.tasks",
    "drake_x.cli",
    "drake_x.core",
    "drake_x.integrations",
    "drake_x.integrations.apk",
    "drake_x.integrations.builtin",
    "drake_x.integrations.optional",
    "drake_x.models",
    "drake_x.modules",
    "drake_x.graph",
    "drake_x.normalize",
    "drake_x.normalize.apk",
    "drake_x.reporting",
    "drake_x.reports",
    "drake_x.safety",
    "drake_x.tools",
    "drake_x.utils",
]

[tool.setuptools.package-data]
"drake_x.assets" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented API uses `typer.Option(...)` and `typer.Argument(...)` as
# argument default values. B008 (function-call-in-default-argument) flags these
# as a generic Python anti-pattern, but they are the canonical Typer idiom and
# refactoring would harm CLI readability for no functional benefit.
"drake_x/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
